read me completed, spurious files deleted

--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/northcoders/be-nc-news.git"
+    "url": "https://github.com/BertF1966/API-demonstration"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/northcoders/be-nc-news/issues"
+    "url": "https://github.com/BertF1966/API-demonstration/issues"
   },
-  "homepage": "https://github.com/northcoders/be-nc-news#readme",
+  "homepage": "https://github.com/BertF1966/API-demonstration#README",
   "devDependencies": {
     "husky": "^7.0.0",
     "jest": "^27.5.1",
